[package]
name = "stusb4500"
description = "STUSB4500 USB-PD Sink controller driver"
version = "0.1.0"
authors = ["Gustav Palmqvist <gustavp@gpa-robotics.com>"]
edition = "2018"
repository = "https://github.com/Atmelfan/stusb4500-rs"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = {version = "1.2.1", default-features = false}
bitflags = "1.2"
bitfield = "0.13.2"
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.2"
embedded-hal-mock = "0.4"
